--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
 
 .tomato-day-box {
   display: flex;
-  border-radius: 5%;
+  border-radius: 5px;
   width: 80%;
   height: 60px;
   justify-content: center;
@@ -63,7 +63,7 @@
 .button {
   background: #edd9bb;
   color: white;
-  border-radius: 30%;
+  border-radius: 5px;
   width: 40%;
   display: flex;
   align-items: center;
